# Image-oriented-File-System-ImgFS-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
done/: .gitignore  Makefile  README.md  TestFile12  TestFile13  error.h  http_net.c  http_net.h  http_prot.c  http_prot.h  image_content.c  image_dedup.c  imgfs.h  imgfs_create.c  imgfs_delete.c  imgfs_insert.c  imgfs_list.c  imgfs_read.c  imgfs_server.c  imgfs_server_service.c  imgfs_tools.c  imgfscmd.c  imgfscmd_functions.c  imgfscmd_functions.h  index.html  log.html  report.html  socket_layer.c  socket_layer.h  tcp-test-client.c  tcp-test-server.c  test02.imgfs  test05.imgfs  time.csv  tmp.txt  util.h
done/handouts/: 01.imgfs.md  01.main.md
done/src/: error.c  image_dedup.h  imgfs.h  imgfs_list.c  imgfs_tools.c  imgfscmd.c  imgfscmd_functions.c  util.c
done/tests/data/: .gitignore  2047.txt  empty.imgfs  gen_data.sh  insert_duplicate.txt  insert_new.txt  read_resize-8.15.1.txt  test02-w05.txt  test03.imgfs  test04.imgfs  test06.imgfs  test07.imgfs  test09.imgfs  test12.imgfs  test13.imgfs  test20.imgfs  test22.imgfs  test23.imgfs  test24.imgfs
done/tests/data/create/: list_all_params.txt  list_default.txt  list_small_res.txt  list_thumb_res.txt
done/tests/data/delete/: delete_one.txt
done/tests/data/list_out/: empty.txt  test03.txt  test04.txt  test05.txt  test06.txt  test09.txt  test11.txt  test13.txt
done/tests/end-to-end/: week07.robot  week10.robot
done/tests/end-to-end/lib/: Errors.py  Imgfs.py
done/tests/tests/data/: empty2.imgfs  test05.imgfs  test08.imgfs  test11.imgfs  test21.imgfs
done/tests/tests/data/list_out/: test07.txt  test08.txt  test10.txt
done/tests/tests/end-to-end/: keyword.resource  week08.robot
done/tests/tests/unit/: unit-test-imgfsinsert.c
done/tests/unit/: .gitignore  Makefile  Makefile.week12  personal_http_prot_test  personal_tests_week12  personal_tests_week12.c  unit-test-imgfscreate.c  unit-test-imgfsdelete.c  unit-test-imgfslist.c  unit-test-imgfsread.c  unit-test-imgfsstruct.c  unit-test-imgfstools.c
grading/project01/: project01.yaml
grading/project01/done/: http_net.h  http_prot.h  imgfs_create.c  imgfs_delete.c  imgfs_list.c  imgfs_server_service.h  imgfs_tools.c
grading/project01/fuzzing/crash-ad59d98467f7fdff73ea8681aa75355ae38bd5b1/: crash_output.txt  fuzz.imgfs  fuzz_file  run.sh
grading/projectFinal/: projectFinal.yaml  static-analysis.txt
grading/projectFinal/done/: README.md  http-test-server.c  http_prot.c  imgfs_delete.c  imgfs_insert.c  imgfs_list.c  imgfs_read.c  imgfs_server_service.c  imgfs_tools.c  imgfscmd.c  imgfscmd_functions.c  mon_res_02.txt  socket_layer.c  tcp-test-client.c
grading/projectFinal/done/tests/unit/: Makefile  personal_tests_week12.c  test.h  unit-test-http.c  unit-test-imgfsdedup.c  unit-test-imgfsinsert.c  unit-test-imgfsresolutions.c
grading/projectFinal/fuzzing/: how-to-run-test-cases.md
grading/projectFinal/fuzzing/crash-67591c518f48f72519cdf54006bf38606d0c1fc4/: crash_output.txt  fuzz.imgfs  run.sh
grading/projectFinal/fuzzing/crash-9e065afa6375fcdfa321678aa9b9bc35e10dd06c/: crash_output.txt  fuzz.imgfs  run.sh
grading/projectFinal/static-analysis-results/: index.html  report-f9b6bf.html
provided/: .gitignore  submit.sh
provided/handouts/: 01.imgfs.md  01.main.md  02.createdelete.md  03.dedup.md  04.readinsert.md  05.socket.md  06.http.md  07.webservice.md
provided/src/: Makefile  Makefile.week07  Makefile.week09  Makefile.week10  error.h  http_net.c  image_content.h  imgfs.h  imgfs_server.c  imgfs_server_service.c  imgfs_tools.c  imgfscmd.c  week10_provided_code.txt  week12_provided_code.txt  week13_provided_code.txt
provided/tests/data/: .gitignore  aiw.txt  full.imgfs  hello_there.txt  read_resize-8.12.1.txt  read_resize.txt  test10.imgfs
provided/tests/data/list_out/: test12.txt
provided/tests/end-to-end/: week13.robot
provided/tests/end-to-end/lib/: Imgfs.py  Utils.py
provided/tests/unit/: .gitignore  Makefile  Makefile.week08  Makefile.week09  Makefile.week12  Makefile.week13  test.h  unit-test-imgfscontent.c  unit-test-imgfscreate.c  unit-test-imgfsdedup.c  unit-test-imgfsdelete.c  unit-test-imgfslist.c  unit-test-imgfstools.c
